--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,1 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Ubuntu&display=swap');
+
 $PRIMARY_BASE_COLOR:#D4AF37;
+
+
+
+
+
+
+
+
+/** *
+* FONT FAMILIES
+** */
+$PRIMARY_FONT_FAMILY: 'Ubuntu', sans-serif;
